creación del SPA

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,25 @@
   <title>Document</title>
 </head>
 <body>
+    <header></header>
+  <nav>
+    <ul>
+      <li>
+        <a href="#/">DOREMI</a>
+      </li>
+      <li>
+        <a href="#/Login">Login</a>
+      </li>
+      <li>
+        <a href="#/Profile">Profile</a>
+      </li>
+      <li>
+        <a href="#/Trending">Trending</a>
+      </li>
+    </ul>
+  </nav>
+  <section id='container'></section>
+  <footer></footer>
   <script type="module" src="main.js"></script>
 </body>
 </html>
