--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-</head>
+  <script type="module" src="configFirebase.js"></script>
+ </head>
 <body>
     <header></header>
   <nav>
@@ -15,6 +16,9 @@
       </li>
       <li>
         <a href="#/Login">Login</a>
+      </li>
+      <li>
+        <a href="#/SignIn">Sign in</a>
       </li>
       <li>
         <a href="#/Profile">Profile</a>
