enviando mensaje de verificación de correo

--- a/src/index.html
+++ b/src/index.html
@@ -23,12 +23,12 @@
       <li>
         <a href="#/Profile">Profile</a>
       </li>
-      <li>
-        <a href="#/Trending">Trending</a>
-      </li>
     </ul>
   </nav>
   <section id='container'></section>
+  <div>
+    <button onclick="cerrar()">Cerrar Sesión</button>
+  </div>
   <footer></footer>
   <script type="module" src="main.js"></script>
    <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
