--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <script type="module" src="configFirebase.js"></script>
+  <link rel="stylesheet" href="style.css" />
  </head>
 <body>
     <header></header>
@@ -26,10 +27,8 @@
     </ul>
   </nav>
   <section id='container'></section>
-  <div>
-    <button onclick="cerrar()">Cerrar Sesión</button>
-  </div>
-  <footer></footer>
+  
+  <footer>by Bri & Nath</footer>
   <script type="module" src="main.js"></script>
    <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
 
