--- a/src/index.html
+++ b/src/index.html
@@ -4,29 +4,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Do-Re-Mi</title>
   <script type="module" src="configFirebase.js"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/da0572ec61.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css" />
+ 
  </head>
 <body>
-    <header></header>
-  <nav>
-    <ul>
-      <li>
-        <a href="#/">DOREMI</a>
-      </li>
-      <li>
-        <a href="#/Login">Login</a>
-      </li>
-      <li>
-        <a href="#/SignIn">Sign in</a>
-      </li>
-      <li>
-        <a href="#/Profile">Profile</a>
-      </li>
-    </ul>
-  </nav>
-  <section id='container'></section>
+  <main id="main"></main>
+  <!-- <header id='header' class='hide'> 
+    <nav>
+      <img src="img/logoMarca.png" class="logo-header"  height="50 px" width="50px"/>
+       <ul class ='menu'>
+        <li class="menu-option">
+          <a href="#/"><i class="fas fa-home"></i>DOREMI</a>
+        </li>
+        <li class="menu-option">
+          <a href="#/Login">Login</a>
+        </li>
+        <li class="menu-option">
+          <a href="#/SignIn">Sign Un<i class="fas fa-user-plus"></i></a>
+        </li>
+        <li class="menu-option">
+          <a href="#/Profile"><i class="fas fa-user-edit"></i></i>Profile</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <section id='container'></section> -->
   
   <footer>by Bri & Nath</footer>
   <script type="module" src="main.js"></script>
@@ -41,5 +48,7 @@
   <!-- Add Firebase products that you want to use -->
   <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-firestore.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-storage.js"></script>
 </body>
 </html>
