correccion de funciones y test usando los mocks de firebase

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
   </header>
   <section id='container'></section> -->
   
-  <footer>by Bri & Nath</footer>
+  <!-- <footer>by Bri & Nath</footer> -->
   <script type="module" src="main.js"></script>
    <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
 
